# otus-cpp-basics

./: CMakeLists.txt  README.md  file_interactor.cpp  file_interactor.h  guess_the_number.cpp  score_repository.cpp  score_repository.h
